@@ -1,7 +1,8 @@
 1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
-	* Object2dDisplay.m ([Object -makeProbeAtX:Y:]): Use createProbeDisplay
-	instead of calling createProbeDisplayFor method.
+	* Object2dDisplay.m ([Object -makeProbeAtX:Y:]): Use
+	CREATE_PROBE_DISPLAY instead of calling createProbeDisplayFor
+	method.
 
 1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
